--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <script src="https://wchat.freshchat.com/js/widget.js"></script>
     <title>Google Singin</title>
 
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <meta name="google-signin-client_id" content="7043023362-unmq22nrru7qvpmoqh4qeu30k0n9ad46.apps.googleusercontent.com">
+ 
 </head>
 <body>
 
@@ -45,7 +48,12 @@
         </script>
 
 
-
+<script>
+  window.fcWidget.init({
+    token: "d3f796b7-7313-4b46-b0f8-8902a10d5502",
+    host: "https://wchat.freshchat.com"
+  });
+</script>
     
 </body>
 </html>
