--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <script src="https://wchat.freshchat.com/js/widget.js"></script>
+    
+    <script src="http://static.mlstatic.com/org-img/sdk/mercadolibre-1.0.4.js"></script>
+
+    
+
     <title>Google Singin</title>
 
     <script src="https://apis.google.com/js/platform.js" async defer></script>
