--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
 
     <script src="https://wchat.freshchat.com/js/widget.js"></script>
     
-    
+    <script src="https://a248.e.akamai.net/secure.mlstatic.com/org-img/sdk/mercadolibre-1.0.4.js"></script>
+
 
     <title>Google Singin</title>
 
