--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <script src="https://wchat.freshchat.com/js/widget.js"></script>
-    
-    <script src="https://a248.e.akamai.net/secure.mlstatic.com/org-img/sdk/mercadolibre-1.0.4.js"></script>
+    <!-- <script src="https://wchat.freshchat.com/js/widget.js"></script> -->
 
     <title>Google Singin</title>
 
@@ -51,12 +49,12 @@
         </script>
 
 
-<script>
+<!-- <script>
   window.fcWidget.init({
     token: "d3f796b7-7313-4b46-b0f8-8902a10d5502",
     host: "https://wchat.freshchat.com"
   });
-</script>
+</script> -->
     
 </body>
 </html>
