--- a/public/index.html
+++ b/public/index.html
@@ -1,60 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-    <!-- <script src="https://wchat.freshchat.com/js/widget.js"></script> -->
-
-    <title>Google Singin</title>
+    <title>Google Sign-In Demo</title>
 
     <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <meta name="google-signin-client_id" content="7043023362-unmq22nrru7qvpmoqh4qeu30k0n9ad46.apps.googleusercontent.com">
- 
+    <meta name="google-signin-client_id" content="219758474264-vh1bibcphgvbc32km508lubtqkanikf1.apps.googleusercontent.com">
+
 </head>
+
 <body>
 
-        <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
-        <a href="#" onclick="signOut();">Sign out</a>
-         <script>
-           function signOut() {
-           var auth2 = gapi.auth2.getAuthInstance();
-           auth2.signOut().then(function () {
-           console.log('User signed out.');
-          });
-          }
-        </script>
+    <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
-        <script> 
-        function onSignIn(googleUser) {
-         var profile = googleUser.getBasicProfile();
-         console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
-         console.log('Name: ' + profile.getName());
-         console.log('Image URL: ' + profile.getImageUrl());
-         console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
-         var id_token = googleUser.getAuthResponse().id_token;
-         console.log(id_token);
-        
 
-         var xhr = new XMLHttpRequest();
-         xhr.open('POST', '/google');
-         xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
-         xhr.onload = function() {
-               console.log('Signed in as: ' + xhr.responseText);
-         };
-         xhr.send('idtoken=' + id_token);
+    <a href="#" onclick="signOut();">Sign out</a>
+    <script>
+        function signOut() {
+            var auth2 = gapi.auth2.getAuthInstance();
+            auth2.signOut().then(function() {
+                console.log('User signed out.');
+            });
         }
-        </script>
+    </script>
 
 
-<!-- <script>
-  window.fcWidget.init({
-    token: "d3f796b7-7313-4b46-b0f8-8902a10d5502",
-    host: "https://wchat.freshchat.com"
-  });
-</script> -->
-    
+    <script>
+        function onSignIn(googleUser) {
+            var profile = googleUser.getBasicProfile();
+            console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
+            console.log('Name: ' + profile.getName());
+            console.log('Image URL: ' + profile.getImageUrl());
+            console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
+
+
+            var id_token = googleUser.getAuthResponse().id_token;
+
+            console.log(id_token);
+
+
+            var xhr = new XMLHttpRequest();
+            xhr.open('POST', '/google');
+            xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
+            xhr.onload = function() {
+                console.log('Signed in as: ' + xhr.responseText);
+            };
+            xhr.send('idtoken=' + id_token);
+
+        }
+    </script>
+
 </body>
+
 </html>
